# piphons

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  daa-dtmf.workspace  daadtmf.workspace  libdaadtmf.project  libpiphons.project  piphons.workspace
dev/: CMakeLists.txt
dev/cmake/: GitVersion.cmake  PicoConfig.cmake
dev/codelite/executable-daadtmf/: executable-daadtmf.project  main.cpp
dev/codelite/executable-piphons/: executable-piphons.project  main.cpp
examples/daa-demo/: README.md  daa-demo.project  main.cpp
examples/dtmf-demo/: README.md  dtmf-demo.project  main.cpp
examples/piphons-demo/: README.md  main.cpp  piphons-demo.project
examples/tts-demo/: README.md  main.cpp  tts-demo.project
extras/hardware/: daa-dtmf-shield-bom.ods
extras/hardware/gerber/: daa-dtmf-shield - CADCAM Bottom Copper.TXT  daa-dtmf-shield - CADCAM Drill.TXT  daa-dtmf-shield - CADCAM Mechanical 1.TXT  daa-dtmf-shield - CADCAM Top Copper.TXT  daa-dtmf-shield - CADCAM Top Silk Screen.TXT  daa-dtmf-shield.cbf  piphons-shield - CADCAM Top Copper.TXT  piphons-shield - CADCAM Top Silk Screen.TXT  piphons-shield-v110.cbf
extras/hardware/proteus/: daa-dtmf-shield.DSN  daa-dtmf-shield.LYT  daa-offhook-sim.DSN  piphons-shield.DSN  piphons-shield.LYT
include/: daadtmf.h  daatoueris.h  global.h  piphons.h
include/piphons/: daa.h  dtmf.h  global.h  tts.h
include/piphons/toueris/: daa.h
lib/: CMakeLists.txt  config.h.in  libdaadtmf-config-version.cmake.in  libdaadtmf-config.cmake.in  libdaadtmf.pc.in  libpiphons-config-version.cmake.in  libpiphons-config.cmake.in  libpiphons.pc.in
src/: daa.cpp  daa_p.h  daadtmf.cpp  daadtmf_p.h  daatoueris.cpp  dtmf.cpp  dtmf_p.h  tts.cpp  tts_engine.cpp  tts_engine_p.h  tts_p.h  tts_player.cpp  tts_player_p.h  tts_voice.cpp  tts_voice_p.h
src/toueris/: daa.cpp
